# vibe-coding-cn

./: .gitignore  README-option-pricing.md  README.md  pyproject.toml  requirements.txt
memory-bank/: architecture.md  implementation-plan.md  progress.md  project-context.md  system_prompt.md  tech-stack.md
memory_bank/: architecture.md  implementation_plan.md  progress.md  project_context.md  system_prompt.md  tech_stack.md
prompts/: architecture_generator_prompt.md  context_planning_prompt.md  implementation_planning_prompt.md  progress_generator_prompt.md  step_execution_prompt.md  system_prompt_generator.md  tech_stack_generator_prompt.md
src/market_data/: __init__.py  market_data.py
src/options/: __init__.py  option_params.py
src/pricing_tool/: __init__.py
src/pricing_tool/options/: __init__.py  base.py  exotic.py
src/pricing_tool/pricing/: __init__.py  base.py
src/pricing_tool/utils/: __init__.py  market_data.py
tests/: test_market_data.py  test_option_params.py  test_options_base.py  test_pricing_base.py  test_project_structure.py
